[gd_scene load_steps=10 format=3 uid="uid://cp0f0q403d4se"]

[ext_resource type="PackedScene" uid="uid://wk134ykl3tsb" path="res://Characters/Character.tscn" id="1_p5q2p"]
[ext_resource type="Theme" uid="uid://dbcrs2o8w2e64" path="res://debug_theme.tres" id="2_hmxd7"]
[ext_resource type="Script" path="res://character_debug/randomize_button.gd" id="3_ad331"]
[ext_resource type="Script" path="res://character_debug/color_picker_select.gd" id="3_efoeq"]
[ext_resource type="Script" path="res://character_debug/animation_dropdown.gd" id="4_1ftf8"]
[ext_resource type="Script" path="res://character_debug/skin_tone_manager.gd" id="5_uepik"]
[ext_resource type="Script" path="res://character_debug/outfit_dropdown.gd" id="6_0cjmi"]
[ext_resource type="Script" path="res://character_debug/outfit_manager.gd" id="7_wackm"]

[sub_resource type="LabelSettings" id="LabelSettings_8cvr1"]
font_size = 32

[node name="CharacterDebug" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.988741, 0.149639, 0, -0.149639, 0.988741, -0.488245, 4.0352, 9.4528)
fov = 37.5

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.93495)

[node name="Meeple" parent="." instance=ExtResource("1_p5q2p")]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 469.0
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18
vertical = true

[node name="Label" type="Label" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme = ExtResource("2_hmxd7")
text = "Character Tester"
label_settings = SubResource("LabelSettings_8cvr1")
horizontal_alignment = 1

[node name="RandomizeButton" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme = ExtResource("2_hmxd7")
text = "Randomize!"
script = ExtResource("3_ad331")

[node name="UniformizeButton" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme = ExtResource("2_hmxd7")
text = "Set all pieces to last added"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
columns = 2

[node name="BoxContainer2" type="VBoxContainer" parent="MarginContainer/BoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/BoxContainer/GridContainer/BoxContainer2"]
layout_mode = 2
text = "Skin tone tint"

[node name="BoxContainer3" type="VBoxContainer" parent="MarginContainer/BoxContainer/GridContainer"]
layout_mode = 2

[node name="SkinTonePicker" type="ColorPickerButton" parent="MarginContainer/BoxContainer/GridContainer/BoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
color = Color(0.56, 0.31892, 0.2072, 1)
script = ExtResource("3_efoeq")
signal_name = "skin_tone_changed"

[node name="BoxContainer" type="VBoxContainer" parent="MarginContainer/BoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/BoxContainer/GridContainer/BoxContainer"]
layout_mode = 2
text = "Hair tint"

[node name="HairColorPicker" type="ColorPickerButton" parent="MarginContainer/BoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
color = Color(0.704421, 0.0288518, 0.392032, 1)
script = ExtResource("3_efoeq")
signal_name = "hair_color_changed"

[node name="AnimationDropdown" type="OptionButton" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hmxd7")
script = ExtResource("4_1ftf8")

[node name="TopDropdown" type="OptionButton" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hmxd7")
script = ExtResource("6_0cjmi")
piece_type = "Tops"

[node name="BottomDropdown" type="OptionButton" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hmxd7")
script = ExtResource("6_0cjmi")
piece_type = "Bottoms"

[node name="ShoesDropdown" type="OptionButton" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hmxd7")
script = ExtResource("6_0cjmi")
piece_type = "Shoes"

[node name="SkinToneManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_uepik")

[node name="OutfitManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_wackm")
